# engine

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  CMakeCache.txt  CMakeLists.txt  CODING_STANDARD.md  LICENSE  README.md  asset_plugin.605b9ea.wasm  asset_plugin.7bbf5ec.wasm  asset_plugin.wasm  backend_plugin.e85f090.wasm  backend_plugin.feadb4c.wasm  cmake_install.cmake  edit_plugin.e849c38.wasm  entity_plugin.36160e5.wasm  entity_plugin.367c98e.wasm  entity_plugin.afcc80f.wasm  eslint.config.js  frame_graph.400072e.wasm  hello_plugin.95bca7e.wasm  imgui_plugin.0c8bed7.wasm  imgui_plugin.3f85617.wasm  imgui_plugin.903a671.wasm  imgui_plugin.9938cdc.wasm  imgui_plugin.c687aa2.wasm  imgui_plugin.f383e73.wasm  index.012ac05.wasm  index.0353437.wasm  index.04a823d.wasm  index.070359f.wasm  index.0708d1f.wasm  index.07d8981.wasm  index.07ebb98.wasm  index.087692c.wasm  index.0876c06.wasm  (+320 more)
.githooks/: pre-commit
.github/: CODEOWNERS  dependabot.yml  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  initiative.md  task.md
.github/scripts/: compute-version.js  coverage-report.py  format-report.sh  indent-scm.el  indent-scm.py  lint-scm-comments.py  stage-site.sh
.github/workflows/: auto-merge.yml  changelog-gate.yml  ci.yml  clang-tidy.yml  coverage.yml  deploy.yml  flatpak-build.yml  format.yml  pages-deploy.yml  pr-title.yml  preview.yml  release-label-gate.yml  release-please.yml  release.yml  sanitizers.yml  sync-labels.yml  windows-build.yml
assets/: index-CPJpkikc.js
cmake/: CMakeLists.scm  CMakeLists.txt
cmake/modules/core/: CMakeLists.scm  CMakeLists.txt  shell.html.in  subsystem_test.c
cmake/modules/log/: CMakeLists.scm  CMakeLists.txt
cmake/plugins/asset/: CMakeLists.txt  asset_mesh_test.c  primitives.c
cmake/plugins/edit_plugin/: CMakeLists.txt
cmake/plugins/renderer_webgl/: CMakeLists.txt
cmake/plugins/scene_renderer/: CMakeLists.txt  scene_renderer.c
cmake/plugins/shader_graph/: CMakeLists.txt
cmake/plugins/vscript/: CMakeLists.txt  vscript.h
docs/: backend-abstraction.md  ci-and-release.md  entity-system.md  frame-graph.md  ninja-build.md  qt-editor-shell.md  scene-format.md  scene-renderer.md  scheme-runtime.md  steamos-window.md
docs/mockups/: asset-inspector.html
flatpak/: krudd.flatpakrepo  summary  summary.idx  summary.idx.sig  summary.sig
krudd/: build.scm  cmake.scm  introspect.scm  introspect_test.scm  krudd.c  run-tests.sh
krudd/cmake/: CMakeLists.scm  cmake.scm  manifest.scm
krudd/kruddmake/: build.scm  introspect.scm  introspect_test.scm  manifest.scm  ninja.scm  resolve.scm  resolve_test.scm  run-tests.sh
krudd/ninja/: manifest.scm  ninja.scm  resolve.scm  resolve_test.scm  run-tests.sh
modules/asset/: asset.h  asset_plugin.c
modules/core/: CMakeLists.txt  Makefile  async_subsystem.h  cmake_install.cmake  engine.c  engine.h  error_overlay.js  plugin_abi.c  plugin_loader.c  plugin_loader.h  random_fill_shim.js  resizable_buffer_shim.js  ring_buf.c  shell.html  shell.html.in  subsystem.c  subsystem.h  subsystem_manager.c  subsystem_manager.h  subsystem_manager_test.c  version.h  version.h.in
modules/core/include/: subsystem.h
modules/hello_plugin/: hello_plugin.c
modules/log/: CMakeLists.txt  cmake_install.cmake  log.c  log.h  log_test.c
modules/memory/: CMakeLists.txt  cmake_install.cmake  memory.c  memory.h  memory_test.c  mi_libc_shim.c
modules/scheme/: CMakeLists.txt  scheme.c  scheme.h  scheme_test.c
packaging/flatpak/: README.md  io.github.kruddage.Editor.desktop  io.github.kruddage.Editor.metainfo.xml  io.github.kruddage.Editor.yml  make-flatpakrepo.sh  org.kruddage.Editor.yml
packaging/nsis/: README.md  krudd-editor.nsi
plugins/asset/: CMakeLists.txt  Makefile  asset.h  asset_api_test.c  asset_codec_test.c  asset_edit.c  asset_edit_test.c  asset_mut_test.c  asset_plugin.c  asset_shader_test.c  asset_test.c  cmake_install.cmake  primitives.h
plugins/backend/: CMakeLists.txt  backend_plugin.c  backend_record.c  backend_record_test.c  branch_host.c  branch_host.h  branch_host_test.c  branch_ingest.c  branch_ingest.h  branch_manifest.h  branch_roundtrip_test.c  branch_serialize.c
plugins/branch/: CMakeLists.txt  branch.c  branch.h  branch_test.c
plugins/cas/: CMakeLists.txt  cas.c  cas_idb.c  cas_idb.h  cas_mem.h  cas_test.c
plugins/edit_plugin/: CMakeLists.txt  edit.c  edit_plugin.c  edit_test.c
plugins/entity_plugin/: CMakeLists.txt  entity.c  entity_plugin.c  entity_test.c  scene_edit.c  scene_edit.h  scene_edit_test.c
plugins/frame_graph/: CMakeLists.txt  cmake_install.cmake  fg.c  fg.h  fg_test.c
plugins/hello_plugin/: CMakeLists.scm  CMakeLists.txt  cmake_install.cmake  hello_plugin.c
plugins/imgui_plugin/: CMakeLists.txt  cmake_install.cmake  imgui_plugin.cpp
plugins/include/: asset_api.h  asset_codec_api.h  backend_api.h  camera.h  camera_api.h  canvas_api.h  edit_api.h  entity_api.h  fetch_api.h  log_api.h  log_level.h  memory_api.h  mesh.h  scene.h  vscript_api.h  world.h
plugins/kruddboard/: CMakeLists.txt  cmake_install.cmake  embed_changelog.cmake  kruddboard.cpp  md_draw.h  md_parse.c  md_parse.h  md_parse_test.c
plugins/math/: CMakeLists.scm  camera.c  math.c  math_test.c
plugins/renderer_null/: CMakeLists.txt  cmake_install.cmake  renderer_null.c  renderer_null.h  renderer_null_test.c
plugins/scene_plugin/: CMakeLists.txt  scene_plugin.c  scene_plugin.h  scene_test.c
plugins/snapshot/: CMakeLists.txt  snapshot.c  snapshot.h  snapshot_test.c
scripts/: check-allocations.mjs  check-allocations.test.mjs  check-changelog.sh  check-changelog.test.sh  check-no-raw-malloc.sh  check-no-raw-malloc.test.sh  check-plugin-imports.sh  check-plugin-imports.test.sh  check-plugin-no-em-asm.sh  check-plugin-no-em-asm.test.sh  check-plugin-symbols.mjs  check-plugin-symbols.test.mjs  lint  stage-site.sh
tests/: CMakeLists.txt  fg_test.c  log_test.c  memory_test.c  plugin_loader_test.c  renderer_null_test.c  subsystem_manager_test.c  subsystem_test.c
(+1271 files in other folders)
